--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,6 +27,8 @@
       <span aria-hidden class="cybr-btn__tag">REGISTER</span>
     </button>
   </section>
-  <button mat-button>HOW IT WORKS</button>
-  <button mat-button>LOGIN</button>
+  <div>
+    <button mat-button>HOW IT WORKS</button>
+    <button mat-button>LOGIN</button>
+  </div>
 </mat-toolbar>
