--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,121 +1,70 @@
-<!-- <mat-toolbar class="footer" color="accent">
-  <span class="example-spacer"></span>
+<div style="padding: 3%" *ngIf="!loading && !isMobile">
   <mat-divider></mat-divider>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon svgIcon="privacy"></mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon svgIcon="cookies"></mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon svgIcon="facebook"></mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon svgIcon="instagram"></mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon svgIcon="love"></mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon svgIcon="share"></mat-icon>
-  </button>
-</mat-toolbar> -->
-<div style="padding: 3%;" *ngIf="!loading && !isMobile">
-  <mat-divider></mat-divider>
-  <mat-grid-list cols="4" rowHeight="50px">
+  <mat-grid-list cols="4" rowHeight="80px">
     <mat-grid-tile
       *ngFor="let tile of tiles"
       [colspan]="tile.cols"
       [rowspan]="tile.rows"
     >
       <div *ngIf="tile.id === 2">
-        <div
-          style="
-            margin-bottom: 3%;
-            float: inline-start;
-            font-weight: 900;
-            font-size: 15px;
-            line-height: 21px;
-            color: #909497;
-          "
-        >
-          
-        </div>
-  
         <form class="example-form">
           <mat-form-field color="accent">
             <mat-label>Get the latest updates</mat-label>
-            <input placeholder="Your e-mail" matInput value="">
+            <input placeholder="Your e-mail" matInput value="" />
           </mat-form-field>
-          <button mat-button>SUBSCRIBE</button>
+          <button class="subscribeButton" mat-button>SUBSCRIBE</button>
         </form>
-        
       </div>
-  
-      <div>
-        <button
-          *ngIf="tile.id === 2"
-          mat-icon-button
-          class="example-icon"
-          aria-label="Example icon-button with share icon"
-        >
-          <mat-icon svgIcon="facebook"></mat-icon>
-        </button>
-  
-        <button
-          *ngIf="tile.id === 2"
-          mat-icon-button
-          class="example-icon"
-          aria-label="Example icon-button with share icon"
-        >
-          <mat-icon svgIcon="instagram"></mat-icon>
-        </button>
-      </div>
-  
-      <button *ngIf="tile.id == 3" mat-button>COOKIE POLICY</button>
-      <button *ngIf="tile.id == 3" mat-button>PRIVACY POLICY</button>
-      <div
-        style="
-          font-weight: 900;
-          font-size: 15px;
-          line-height: 21px;
-          color: #909497;
-        "
-        *ngIf="tile.id === 4"
+
+      <a
+        class="linkButton"
+        *ngIf="tile.id == 3"
+        href="https://www.iubenda.com/privacy-policy/93551682/cookie-policy"
+        target="_blank"
+        >COOKIE POLICY</a
       >
-        © Virtoote, Inc. All rights reserved.
+      <a
+        class="linkButton"
+        *ngIf="tile.id == 3"
+        href="https://www.iubenda.com/privacy-policy/93551682"
+        target="_blank"
+        >PRIVACY POLICY</a
+      >
+      <div *ngIf="tile.id === 4">
+        <div>
+          <p>
+            <a href="https://www.facebook.com/Virtoote-101245872152686">
+              <mat-icon svgIcon="facebook"></mat-icon>
+            </a>
+            <a href="https://www.instagram.com/virtoote/">
+              <mat-icon svgIcon="instagram"></mat-icon>
+            </a>
+          </p>
+          <p class="copyright">© Virtoote, Inc. All rights reserved.</p>
+        </div>
       </div>
     </mat-grid-tile>
-  </mat-grid-list>  
+  </mat-grid-list>
 </div>
-<div style="margin-top: 5%; padding: 5%;             float: inline-start;
-font-weight: 900;
-font-size: 15px;
-line-height: 21px;
-color: #909497;" *ngIf="!loading && isMobile">
-  © Virtoote, Inc. All rights reserved.
+<div class="copyright-mobile" *ngIf="!loading && isMobile">
+  <div>
+    <p>
+      <a href="https://www.facebook.com/Virtoote-101245872152686">
+        <mat-icon svgIcon="facebook"></mat-icon>
+      </a>
+      <a href="https://www.instagram.com/virtoote/">
+        <mat-icon svgIcon="instagram"></mat-icon>
+      </a>
+    </p>
+    <p class="copyright">© Virtoote, Inc. All rights reserved.</p>
+
+    <p>
+      <mat-form-field color="accent">
+        <mat-label>Get the latest updates</mat-label>
+        <input placeholder="Your e-mail" matInput value="" />
+      </mat-form-field>
+      <button class="subscribeButton" mat-button>SUBSCRIBE</button>
+    </p>
+    
+  </div>
 </div>
