--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -6,15 +6,6 @@
   transform: translate(-50%, -50%);
 }
 
-.example-card {
-  max-width: 400px;
-  background-color: #9C27B0;
-}
-
-.cardDescription {
-  font-style: oblique;
-}
-
 .cards-list {
   z-index: 0;
   width: 100%;
@@ -25,7 +16,7 @@
 }
 
 .card {
-  margin: 30px auto;
+  margin: 50px auto;
   width: 250px;
   height: 250px;
   border-radius: 40px;
@@ -35,6 +26,9 @@
 }
 
 .card .card_image {
+  background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center center;
   width: inherit;
   height: inherit;
   border-radius: 40px;
@@ -50,23 +44,27 @@
 .card .card_title {
   text-align: center;
   border-radius: 0px 0px 40px 40px;
-  font-weight: bold;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 22px;
+  font-size: 15px;
+  font-weight: 900;
+  line-height: 21px;
   color: #ffffff;
-  margin-top: 15px;
-  height: 40px;
+  margin-top: 30px;
+}
+
+.card .card_subtitle {
+  text-align: center;
+  border-radius: 0px 0px 40px 40px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  color: rgba(255, 255, 255, 0.5);
+  margin-top: 5px;
 }
 
 .card:hover {
   transform: scale(0.9, 0.9);
   box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
     -5px -5px 30px 15px rgba(0,0,0,0.22);
-}
-
-.title-black {
-  color: #34495E;
 }
 
 @media all and (max-width: 500px) {
