--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,7 +28,33 @@
     </button>
   </section>
   <div>
-    <button mat-button>HOW IT WORKS</button>
-    <button mat-button>LOGIN</button>
+    <button
+      mat-icon-button
+      [matMenuTriggerFor]="menu"
+      aria-label="Example icon-button with a menu"
+    >
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <a mat-menu-item href="#">
+        <mat-icon>workspaces</mat-icon>
+        <span>HOW IT WORKS</span>
+      </a>
+      <a mat-menu-item href="#">
+        <mat-icon>face</mat-icon>
+        <span>LOGIN</span>
+      </a>
+      <a mat-menu-item href="https://www.iubenda.com/privacy-policy/93551682">
+        <mat-icon>privacy_tip</mat-icon>
+        <span>PRIVACY POLICY</span>
+      </a>
+      <a
+        mat-menu-item
+        href="https://www.iubenda.com/privacy-policy/93551682/cookie-policy"
+      >
+        <mat-icon>policy</mat-icon>
+        <span>COOKIE POLICY</span>
+      </a>
+    </mat-menu>
   </div>
 </mat-toolbar>
