added search bar on mobile

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -32,6 +32,7 @@
     risposte, stimoli e consigli per crescere
   </h4>
   <mat-divider></mat-divider>
+  <form style="margin-top: 3%;" class="search-box-mobile"><input type="text" placeholder=" " /><button type="reset"></button></form>
 </div>
 
 <div style="padding: 3%" *ngIf="!loading && !isMobile">
