--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu class="customize" #menu="matMenu">
-      <a mat-menu-item href="#">
+      <a routerLink="/how-it-works" mat-menu-item>
         <mat-icon>workspaces</mat-icon>
         <span>HOW IT WORKS</span>
       </a>
