add redirect on logo to home

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="accent">
-  <span><img src="../../../assets/logo.webp" /></span>
+  <span><img routerLink="/" src="../../../assets/logo.webp" /></span>
   <span class="example-spacer"></span>
   <mat-divider></mat-divider>
   <section *ngIf="!isMobile">
