added top sellers

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -19,7 +19,7 @@
 </div>
 
 <div *ngIf="!loading" class="cards-list">
-  <mat-card class="card 1">
+  <mat-card class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/YRzQnWzbn4WIxd3ZYx/giphy.gif" />
     </div>
@@ -31,7 +31,7 @@
     </div>
   </mat-card>
 
-  <mat-card class="card 2">
+  <mat-card class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/xTiQyw99MYXMazEZoc/giphy.gif" />
     </div>
@@ -43,7 +43,7 @@
     </div>
   </mat-card>
 
-  <mat-card class="card 3">
+  <mat-card class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/mwwEcxbodLHIk/giphy.gif" />
     </div>
@@ -55,7 +55,7 @@
     </div>
   </mat-card>
 
-  <mat-card class="card 4">
+  <mat-card class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/lXiRzPb8C5JTJcfPq/giphy.gif" />
     </div>
@@ -66,116 +66,48 @@
       <p>Stefano Di Cecco</p>
     </div>
   </mat-card>
-
-  <!-- <div class="card 1">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/YRzQnWzbn4WIxd3ZYx/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Digital Marketing</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Simone Sorte</p>
-    </div>
-  </div> -->
-
-  <!-- <div class="card 2">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/xTiQyw99MYXMazEZoc/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Social Media Manager</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Marinela Marku</p>
-    </div>
-  </div>
-
-  <div class="card 3">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/mwwEcxbodLHIk/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Marketing</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Alessandro Martelli</p>
-    </div>
-  </div>
-
-  <div class="card 4">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/lXiRzPb8C5JTJcfPq/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Programming</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Stefano Di Cecco</p>
-    </div>
-  </div>
-
-  <div class="card 1">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/lKKXOCVviOAXS/giphy.gif" />
-    </div>
-
-    <div class="card_title">
-      <p>Languages</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Pinco Pallino</p>
-    </div>
-  </div>
+</div>
+<div style="padding: 5%;">
+  <mat-divider *ngIf="!loading" style="margin: 5% 0 5% 0;"></mat-divider>
 </div>
 
 <div *ngIf="!loading" class="cards-list">
-  <h2
-    style="
-      padding: 5%;
-      margin-top: 5%;
-      font-weight: 900;
-      line-height: 41px;
-      font-size: 30px;
-      color: #ffffff;
-    "
-  >
-    Top sellers
-  </h2>
-  <div class="card 2">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/l0IylR4JqKHLjaP60/giphy.gif" />
-    </div>
-
-    <div class="card_title">
-      <p>Arts</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Tizio Caio</p>
-    </div>
+  <div>
+    <h2 class="second-title">
+      Top Sellers
+    </h2>
   </div>
-  <div class="card 3">
+  <mat-card class="card">
     <div class="card_image">
-      <img src="https://media.giphy.com/media/Ms0GsGq6lORnq/giphy.gif" />
-    </div>
-
-    <div class="card_title">
-      <p>Politics</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Mario Rossi</p>
-    </div>
-  </div>
-
-  <div class="card 4">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/kvu3mUFYobXqyYEdMY/giphy.gif" />
+      <img src="https://media.giphy.com/media/xTiN0FXnoSlDhSjgR2/giphy.gif" />
     </div>
     <div class="card_title">
-      <p>Religion</p>
+      <p>Search Engine Optimization</p>
     </div>
     <div class="card_subtitle">
-      <p>Padre Pio</p>
+      <p>Franco Verdi</p>
     </div>
-  </div> -->
+  </mat-card>
+  <mat-card class="card">
+    <div class="card_image">
+      <img src="https://media.giphy.com/media/cgW5iwX0e37qg/giphy.gif" />
+    </div>
+    <div class="card_title">
+      <p>Musicians</p>
+    </div>
+    <div class="card_subtitle">
+      <p>Loren Gray</p>
+    </div>
+  </mat-card>
+  <mat-card class="card">
+    <div class="card_image">
+      <img src="https://media.giphy.com/media/pO4UHglOY2vII/giphy.gif" />
+    </div>
+    <div class="card_title">
+      <p>Dancer</p>
+    </div>
+    <div class="card_subtitle">
+      <p>Fred Astaire</p>
+    </div>
+  </mat-card>
 </div>
