--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -228,3 +228,10 @@ color : #2f3640;
   padding: 0 6px;
 }
 }
+
+.second-title {
+  font-weight: 900; 
+  line-height: 41px; 
+  font-size: 30px; 
+  color: "#ffffff";
+}
