added login component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,7 +27,7 @@
         <mat-icon>workspaces</mat-icon>
         <span>HOW IT WORKS</span>
       </a>
-      <a mat-menu-item href="#">
+      <a routerLink="/login" mat-menu-item href="#">
         <mat-icon>face</mat-icon>
         <span>LOGIN</span>
       </a>
