added social signup

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="forms-container">
       <div class="signin-signup">
         <form action="#" class="sign-in-form">
-          <h2 class="title">Sign in</h2>
+          <!-- <h2 class="title">Sign in</h2> -->
           <div class="input-field">
             <i class="fas fa-user"></i>
             <input type="text" placeholder="Username" />
@@ -13,25 +13,21 @@
             <input type="password" placeholder="Password" />
           </div>
           <input type="submit" value="Login" class="btn solid" />
-          <p class="social-text">Or Sign in with social platforms</p>
+          <!-- <p class="social-text">Or Sign in with social platforms</p>
           <div class="social-media">
             <a href="#" class="social-icon">
-              <!-- <i class="fab fa-facebook-f"></i> -->
               <mat-icon svgIcon="facebook"></mat-icon>
             </a>
             <a href="#" class="social-icon">
-              <!-- <i class="fab fa-twitter"></i> -->
               <mat-icon svgIcon="twitter"></mat-icon>
             </a>
             <a href="#" class="social-icon">
-              <!-- <i class="fab fa-google"></i> -->
               <mat-icon svgIcon="google"></mat-icon>
             </a>
             <a href="#" class="social-icon">
-              <!-- <i class="fab fa-linkedin-in"></i> -->
               <mat-icon svgIcon="linkedin"></mat-icon>
             </a>
-          </div>
+          </div> -->
         </form>
         <form action="#" class="sign-up-form">
           <h2 class="title">Sign up</h2>
@@ -49,7 +45,7 @@
           </div>
           <input type="submit" class="btn" value="Sign up" />
           <p class="social-text">Or Sign up with social platforms</p>
-          <div class="social-media">
+          <!-- <div class="social-media">
             <a href="#" class="social-icon">
               <i class="fab fa-facebook-f"></i>
             </a>
@@ -62,7 +58,7 @@
             <a href="#" class="social-icon">
               <i class="fab fa-linkedin-in"></i>
             </a>
-          </div>
+          </div> -->
         </form>
       </div>
     </div>
@@ -75,7 +71,14 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
             ex ratione. Aliquid!
           </p>
-          <button [routerLink]="['/signup']" routerLinkActive="router-link-active"  class="btn transparent" id="sign-up-btn">Sign up</button>
+          <button
+            [routerLink]="['/signup']"
+            routerLinkActive="router-link-active"
+            class="btn transparent"
+            id="sign-up-btn"
+          >
+            Sign up
+          </button>
         </div>
         <img src="img/log.svg" class="image" alt="" />
       </div>
