--- a/src/app/components/signup/signup.component.scss
+++ b/src/app/components/signup/signup.component.scss
@@ -1,16 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
-
-body {
-  background: rgb(166,192,254);
-  background: linear-gradient(150deg, rgba(166,192,254,1) 0%, rgba(246,128,132,1) 100%);
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  color: white;
-  font-family: "Inter", sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
 .main-container {
   display: flex;
   flex-direction: column;
@@ -29,7 +16,6 @@ body {
 
 .content__input--form > label > input {
   box-sizing: border-box;
-  font-family: "Inter";
   width: 300px;
   height: 40px;
   margin-bottom: 30px;
@@ -52,7 +38,6 @@ body {
   border: none;
   border-radius: 13px;
   margin-bottom: 30px;
-  font-family: "Inter";
   font-weight: bold;
   font-size: 14px;
 }
@@ -61,7 +46,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #4385F5;
+  background-color: #4385f5;
   color: white;
   overflow: hidden;
 }
@@ -79,12 +64,12 @@ body {
 }
 
 .no-select {
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
@@ -94,7 +79,8 @@ body {
   background-color: white;
 }
 
-.content__submit > p, .content__footer p {
+.content__submit > p,
+.content__footer p {
   font-weight: 200;
 }
 
@@ -124,14 +110,13 @@ a {
     flex-direction: column;
     align-items: center;
   }
- 
+
   .content__footer {
     margin-top: 100px;
   }
 }
 
 @media screen and (min-width: 801px) {
-
   .main-container__content {
     margin-top: 5%;
     box-sizing: border-box;
@@ -145,7 +130,7 @@ a {
     height: 400px;
     padding: 5%;
   }
-  
+
   .content__inputs {
     display: flex;
     justify-content: center;
@@ -154,7 +139,7 @@ a {
     height: 100%;
     transform: translate(0, 5%);
   }
-  
+
   .content__submit {
     width: 50%;
     height: 100%;
@@ -164,8 +149,35 @@ a {
     justify-content: center;
     border-left: 1px solid white;
   }
-  
+
   .content__footer {
     width: 90%;
   }
+}
+
+.social-text {
+  padding: 0.7rem 0;
+  font-size: 1rem;
+}
+
+.social-media {
+  display: flex;
+  justify-content: center;
+}
+
+.social-icon {
+  height: 46px;
+  width: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0.45rem;
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: 0.3s;
+}
+
+.social-icon:hover {
+  color: #34495E;
+  border-color: #34495E;
 }
